feat: add merchants endpoints
